course_project/helm_chart/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "k3s-master"
spec:
  rules:
    - host: jenkins
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
    - host: crudapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crudapp-service
                port:
                  number: 80
    - host: adminer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
    - host: kibana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
